fix(ui): prevent header navigation overlap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1760,7 +1760,7 @@ textarea.form-control {
     padding-left: 12px;
   }
 }
-@media (min-width: 992px) {
+@media (min-width: 1200px) {
   .navbar-default .container-fluid {
     flex-wrap: nowrap;
     align-items: stretch;
@@ -1779,6 +1779,18 @@ textarea.form-control {
   }
   .navbar-default .navbar-right {
     flex: 0 0 auto;
+  }
+}
+@media (min-width: 769px) and (max-width: 1199px) {
+  .navbar-default .navbar-collapse.collapse {
+    flex-wrap: wrap;
+  }
+  .navbar-default .primary-navigation {
+    flex: 1 1 100%;
+  }
+  .navbar-default .navbar-right {
+    flex: 0 0 100%;
+    justify-content: flex-end;
   }
 }
 @media (min-width: 992px) and (max-width: 1399px) {
